--- a/server/server.cfg
+++ b/server/server.cfg
@@ -1,4 +1,4 @@
-## ESSENTIAL
+## Essential
 endpoint_add_tcp "0.0.0.0:30120"
 endpoint_add_udp "0.0.0.0:30120"
 
@@ -17,13 +17,14 @@ ensure vehcontrol
 ensure screenshot-basic
 ensure minimap
 
-## ADDONS
+## Maps
+ensure avalanches
 ensure creativeClothes
 ensure creativeMaps
 ensure creativeVehs
 ensure creativeHouses
 
-## VRP
+## Resources
 ensure logsystem
 ensure vrp_admin
 ensure vrp_anticl
@@ -80,7 +81,7 @@ ensure vrp_trunkchest
 ensure vrp_yellowpages
 ensure ks-character
 
-## EMPS
+## Jobs
 ensure vrp_cashmachine
 ensure vrp_delivery
 ensure vrp_dismantle
@@ -102,45 +103,36 @@ ensure vrp_towdriver
 #ensure vrp_transporter
 #ensure utz_weed
 
-## PHONE
+## Phone
 ensure tattoos
 ensure easytime
 
-## ESSENTIAL
-sv_scriptHookAllowed 0
+## Config
 
 #rcon_password
-
-sets base "Fedeera"
+sets base "Creative"
 sets locale "pt-BR"
 sets Discord "https://discord.gg/"
 sets locale "pt-BR"
 sets Ping "Brasil"
-sets tags "brasil,brasil,roleplay,carros,empregos,rp,droga,vrpex,gang,gangue,fac,vrp,portuguese,portugues,whitelist,LGBTQIA+,servidor,devil community"
+sets tags "brasil,br,pt,lgbt,rp,creative"
 
-sv_hostname "^2[BRASIL]^1 🌟 Fedeera 🌟 ^7| 🌊 ^4WIPE HOJE ^7| 🎧 ^5TOKOVOIP ^7| 🌈 ^1L^8G^3B^2T^4Q^6+ ^7| ^1📞 https://discord.gg/"
+sv_hostname "Creative"
+sv_master1 ""
+sv_scriptHookAllowed 0
+sv_endpointprivacy true
 
 load_server_icon server.png
 
-sv_master1 ""
-
-#sets banner_detail "https://media.discordapp.net/attachments/822548226132672584/822553777641881620/on_arts.gif" # Seu Banner
-#sets banner_connecting "https://media.discordapp.net/attachments/822548226132672584/822553777641881620/on_arts.gif" # Seu banner
+#sets banner_detail "https://media.discordapp.net/attachments/822548226132672584/822553777641881620/on_arts.gif"
+#sets banner_connecting "https://media.discordapp.net/attachments/822548226132672584/822553777641881620/on_arts.gif"
 
 add_ace group.admin command allow
 add_ace group.admin command.quit deny
 add_principal identifier.steam:11000013e66391b group.admin
 
-sv_scriptHookAllowed 0
-sv_endpointprivacy true
+sv_maxclients 7 #Slots
 
-onesync_enabled true
-onesync true
-onesync_distanceCullVehicles true
-onesync_forceMigration true
-
-sv_maxclients 7 # Quantidade de slot's
-
-set mysql_connection_string "server=127.0.0.1;uid=root;password=;database=bahamas"
-set steam_webApiKey "C6B1156E7913C462728BB00E03791ECA" # Adquira em: https://steamcommunity.com/dev/apikey
-set sv_licenseKey "5rxsm12xobs5gdj89b9huaqv3z82db45" # Adquira em: https://keymaster.fivem.net/
+set mysql_connection_string "server=127.0.0.1;uid=root;password=;database=creative"
+set steam_webApiKey "C6B1156E7913C462728BB00E03791ECA"
+set sv_licenseKey "5rxsm12xobs5gdj89b9huaqv3z82db45"
