--- a/server/server.cfg
+++ b/server/server.cfg
@@ -18,7 +18,6 @@ ensure screenshot-basic
 ensure minimap
 
 ## Maps
-ensure avalanches
 ensure creativeClothes
 ensure creativeMaps
 ensure creativeVehs
@@ -38,7 +37,7 @@ ensure vrp_blipsystem
 ensure vrp_checkin
 ensure vrp_chest
 ensure vrp_crafting
-ensure vrp_codes
+ensure vrp_creative
 ensure vrp_call
 ensure vrp_cruiser
 ensure vrp_dna
@@ -82,6 +81,7 @@ ensure vrp_yellowpages
 ensure ks-character
 
 ## Jobs
+ensure foodfarm
 ensure vrp_cashmachine
 ensure vrp_delivery
 ensure vrp_dismantle
