--- a/server/server.cfg
+++ b/server/server.cfg
@@ -19,12 +19,16 @@ ensure minimap
 
 ## Maps
 ensure creativeClothes
+ensure creativeHouses
 ensure creativeMaps
 ensure creativeVehs
-ensure creativeHouses
 
 ## Resources
 ensure logsystem
+ensure tablet
+ensure raceillegal
+ensure racewater
+ensure doors
 ensure vrp_admin
 ensure vrp_anticl
 ensure vrp_animacoes
@@ -38,10 +42,8 @@ ensure vrp_checkin
 ensure vrp_chest
 ensure vrp_crafting
 ensure vrp_creative
-ensure vrp_call
 ensure vrp_cruiser
 ensure vrp_dna
-ensure vrp_doors
 ensure vrp_engine
 ensure vrp_garages
 ensure vrp_helicam
@@ -60,7 +62,6 @@ ensure vrp_phonenotify
 ensure vrp_notifyitens
 ensure vrp_player
 ensure vrp_jail
-ensure vrp_races
 ensure vrp_radio
 ensure vrp_rope
 ensure vrp_safelocker
@@ -72,10 +73,10 @@ ensure vrp_sounds
 ensure vrp_spawn
 ensure vrp_streetrace
 ensure vrp_survival
-ensure tablet
 ensure vrp_tackle
 ensure vrp_taskbar
 ensure vrp_tencode
+ensure vrp_lscustoms
 ensure vrp_trunkchest
 ensure vrp_yellowpages
 ensure ks-character
@@ -86,16 +87,13 @@ ensure vrp_cashmachine
 ensure vrp_delivery
 ensure vrp_dismantle
 ensure vrp_driver
-ensure vrp_gangs
 ensure vrp_garbageman
 ensure vrp_impound
 ensure vrp_jewelry
 ensure vrp_lumberman
-ensure vrp_makeraces
 ensure vrp_methlabs
 ensure vrp_postop
 ensure vrp_products
-ensure vrp_racewater
 ensure vrp_robberys
 ensure vrp_stockade 
 ensure vrp_streetrace
