--- a/server/server.cfg
+++ b/server/server.cfg
@@ -46,6 +46,7 @@ ensure bank
 ensure player
 ensure survival
 ensure checkin
+ensure shops
 
 ensure vrp_anticl
 ensure vrp_barbershop
@@ -67,7 +68,6 @@ ensure vrp_radio
 ensure vrp_rope
 ensure vrp_safelocker
 ensure vrp_skate
-ensure vrp_shops
 ensure vrp_showme
 ensure vrp_skinshop
 ensure vrp_sounds
