--- a/server/server.cfg
+++ b/server/server.cfg
@@ -87,6 +87,7 @@ ensure cashmachine
 ensure dismantle
 ensure driver
 ensure garbageman
+ensure harvest
 ensure impound
 ensure lumberman
 ensure methlabs
