--- a/server/resources/[Cellphone]/gcphone/html/static/config/config.json
+++ b/server/resources/[Cellphone]/gcphone/html/static/config/config.json
@@ -1,26 +1,8 @@
 ﻿{
-	"reseau": "",
+	"reseau": "GRINGA",
 	"warningMessageCount": 500,
-	"themeColor": "#f5414d",
-	"colors": [
-		"#f5414d",
-		"#EC407A",
-		"#AB47BC",
-		"#7E57C2",
-		"#5C6BC0",
-		"#42A5F5",
-		"#29B6F6",
-		"#26C6DA",
-		"#26A69A",
-		"#66BB6A",
-		"#9CCC65",
-		"#D4E157",
-		"#FFCA28",
-		"#FFA726",
-		"#FF7043",
-		"#8D6E63",
-		"#78909C"
-	],
+	"themeColor": "#30636f",
+	"colors": ["30636f"],
 	"useFormatNumberFrance": true,
 	"useWebRTCVocal": false,
 	"RTCConfig": {
