--- a/server/server.cfg
+++ b/server/server.cfg
@@ -3,7 +3,7 @@ endpoint_add_tcp "0.0.0.0:30120"
 endpoint_add_udp "0.0.0.0:30120"
 
 set mysql_connection_string "server=127.0.0.1;uid=root;password=;database=creative"
-set mysql_debug "Console"
+#set mysql_debug "Console"
 
 # This allows players to use scripthook-based plugins such as the legacy Lambda Menu.
 # Set this to 1 to allow scripthook. Do note that this does _not_ guarantee players won't be able to use external plugins.
