--- a/server/server.cfg
+++ b/server/server.cfg
@@ -56,6 +56,9 @@ add_principal identifier.steam:110000133d442df group.admin
 # enable OneSync (required for server-side state awareness)
 set onesync on
 
+# Force build
+#set sv_enforceGameBuild 2189
+
 # Server player slot limit (see https://fivem.net/server-hosting for limits)
 sv_maxclients 5
 
