--- a/server/resources/resources.cfg
+++ b/server/resources/resources.cfg
@@ -20,6 +20,7 @@ ensure creativeSpawn
 
 ensure gcphone
 ensure vehcontrol
+ensure vehmenu
 ensure PolyZone
 ensure screenshot-basic
 ensure minimap
@@ -84,6 +85,7 @@ ensure dismantle
 ensure driver
 ensure garbageman
 ensure harvest
+ensure hunting
 ensure impound
 ensure lumberman
 ensure methlabs
