--- a/server/resources/resources.cfg
+++ b/server/resources/resources.cfg
@@ -16,7 +16,7 @@ ensure creativeClothes
 ensure creativeMaps
 ensure creativeHouses
 ensure creativeVehs
-ensure creativeSpawn
+ensure spawn
 
 ensure gcphone
 ensure vehcontrol
@@ -47,7 +47,6 @@ ensure survival
 ensure checkin
 ensure shops
 ensure dynamic
-#ensure anticl
 ensure barbershop
 ensure benefactor
 ensure bdonate
@@ -65,8 +64,6 @@ ensure jail
 ensure radio
 ensure rope
 ensure safelocker
-ensure skate
-ensure showme
 ensure skinshop
 ensure sounds
 ensure tackle
@@ -92,6 +89,4 @@ ensure robberys
 ensure stockade
 ensure towdriver
 ensure transporter
-#ensure weplant
-#ensure weed
 ensure tattoos
