--- a/server/resources/resources.cfg
+++ b/server/resources/resources.cfg
@@ -25,8 +25,7 @@ ensure PolyZone
 ensure logsystem
 ensure creative
 ensure tablet
-ensure raceillegal
-ensure racewater
+ensure circuits
 ensure doors
 ensure hud
 ensure notify
