--- a/server/resources/resources.cfg
+++ b/server/resources/resources.cfg
@@ -77,6 +77,7 @@ ensure cashmachine
 ensure dismantle
 ensure driver
 ensure garbageman
+ensure miner
 ensure harvest
 ensure hunting
 ensure impound
