--- a/server/resources/resources.cfg
+++ b/server/resources/resources.cfg
@@ -31,7 +31,7 @@ ensure hud
 ensure notify
 ensure notifycall
 ensure notifyitens
-ensure wall
+ensure showids
 ensure garages
 ensure inventory
 ensure itemdamage
