--- a/server/resources/resources.cfg
+++ b/server/resources/resources.cfg
@@ -58,7 +58,7 @@ ensure hospital
 ensure inspect
 ensure login
 ensure notepad
-ensure jail
+ensure prison
 ensure radio
 ensure rope
 ensure safelocker
