--- a/server/server.cfg
+++ b/server/server.cfg
@@ -57,7 +57,7 @@ add_principal identifier.steam:110000133d442df group.admin
 set onesync on
 
 # Force build
-#set sv_enforceGameBuild 2189
+#set sv_enforceGameBuild 2372/2189
 
 # Server player slot limit (see https://fivem.net/server-hosting for limits)
 sv_maxclients 5
