--- a/server/resources/resources.cfg
+++ b/server/resources/resources.cfg
@@ -75,7 +75,7 @@ ensure trunkchest
 ensure yellowpages
 ensure target
 ensure foodfarm
-ensure cashmachine
+ensure eletronics
 ensure dismantle
 ensure driver
 ensure taxi
