--- a/server/resources/resources.cfg
+++ b/server/resources/resources.cfg
@@ -58,11 +58,11 @@ ensure chest
 ensure dna
 ensure engine
 ensure homes
-ensure hospital
+ensure paramedic
+ensure police
 ensure inspect
 ensure login
 ensure notepad
-ensure prison
 ensure radio
 ensure rope
 ensure safelocker
