--- a/server/resources/resources.cfg
+++ b/server/resources/resources.cfg
@@ -64,7 +64,7 @@ ensure login
 ensure notepad
 ensure radio
 ensure rope
-ensure safelocker
+ensure safecrack
 ensure sounds
 ensure tackle
 ensure taskbar
