--- a/server/resources/[gcphone]/gcphone/html/static/config/config.json
+++ b/server/resources/[gcphone]/gcphone/html/static/config/config.json
@@ -1,25 +1,11 @@
-﻿{
+{
 	"reseau": "",
 	"warningMessageCount": 500,
-	"themeColor": "#f5414d",
+	"themeColor": "#40475c",
 	"colors": [
-		"#f5414d",
-		"#EC407A",
-		"#AB47BC",
-		"#7E57C2",
-		"#5C6BC0",
-		"#42A5F5",
-		"#29B6F6",
-		"#26C6DA",
-		"#26A69A",
-		"#66BB6A",
-		"#9CCC65",
-		"#D4E157",
-		"#FFCA28",
-		"#FFA726",
-		"#FF7043",
-		"#8D6E63",
-		"#78909C"
+		"#40475c",
+		"#2d3343",
+		"#2d3343"
 	],
 	"useFormatNumberFrance": true,
 	"useWebRTCVocal": false,
@@ -43,7 +29,7 @@
 		"value": "background.jpg"
 	},
 	"coque": {
-		"Padrão": "background.png"
+		"Default": "background.png"
 	},
 	"coque_default": {
 		"label": "Padrão",
@@ -51,35 +37,27 @@
 	},
 	"serviceCall": [{
 		"display": "Polícia",
-		"backgroundColor": "blue",
+		"backgroundColor": "#40475c",
 		"subMenu": [{
-			"title": "Enviar chamado",
+			"title": "Chamar",
 			"eventName": "gcphone:submitCaller",
-			"type": { "number": "policia" }
+			"type": { "number": "Police" }
 		}]
 	},{
 		"display": "Paramédico",
-		"backgroundColor": "red",
+		"backgroundColor": "#40475c",
 		"subMenu": [{
-			"title": "Enviar chamado",
+			"title": "Chamar",
 			"eventName": "gcphone:submitCaller",
-			"type": { "number": "paramedico" }
-		}]
-	},{
-		"display": "Mecânico",
-		"backgroundColor": "orange",
-		"subMenu": [{
-			"title": "Enviar chamado",
-			"eventName": "gcphone:submitCaller",
-			"type": { "number": "mecanico" }
+			"type": { "number": "Paramedic" }
 		}]
 	},{
 		"display": "Taxista",
-		"backgroundColor": "green",
+		"backgroundColor": "#40475c",
 		"subMenu": [{
-			"title": "Enviar chamado",
+			"title": "Chamar",
 			"eventName": "gcphone:submitCaller",
-			"type": { "number": "taxista" }
+			"type": { "number": "Taxi" }
 		}]
 	}],
 	"defaultContacts": [],
@@ -87,20 +65,23 @@
 		"name": "Mobilphone",
 		"pt_BR__name": "Telefone",
 		"icons": "/html/static/img/icons_app/call.png",
-		"routeName": "appels"
+		"routeName": "appels",
+		"inHomePage": true
 	},
 	{
 		"name": "Messages",
 		"pt_BR__name": "Whatsapp",
 		"icons": "/html/static/img/icons_app/sms.png",
 		"routeName": "messages",
+		"inHomePage": true,
 		"puceRef": "nbMessagesUnread"
 	},
 	{
 		"name": "Contacts",
 		"pt_BR__name": "Contatos",
 		"icons": "/html/static/img/icons_app/contacts.png",
-		"routeName": "contacts"
+		"routeName": "contacts",
+		"inHomePage": true
 	},
 	{
 		"name": "Settings",
@@ -109,8 +90,15 @@
 		"routeName": "parametre"
 	},
 	{
+		"name": "Camera",
+		"pt_BR__name": "Camera",
+		"icons": "/html/static/img/icons_app/photo.png",
+		"routeName": "photo",
+		"inHomePage": true
+	},
+	{
 		"name": "Dark Chat",
-		"pt_BR__name": "Deep Web",
+		"pt_BR__name": "Grupos",
 		"icons": "/html/static/img/icons_app/tchat.png",
 		"routeName": "tchat"
 	}],
@@ -118,25 +106,25 @@
 		"pt_BR": {
 			"NAME": "Português",
 			"PHONE_WARNING_MESSAGE": "Memória",
-			"PHONE_WARNING_MESSAGE_MESS": "efetue uma limpeza.",
+			"PHONE_WARNING_MESSAGE_MESS": "faça uma limpeza.",
 			"CONFIRM": "Aceitar",
-			"CANCEL": "Cancelar",
+			"CANCEL": "Rejeitar",
 			"APP_CONFIG_TITLE": "Configurações",
 			"APP_CONFIG_MY_MUNBER": "Telefone",
 			"APP_CONFIG_WALLPAPER": "Papel de Parede",
 			"APP_CONFIG_CASE": "Visual",
 			"APP_CONFIG_ZOOM": "Zoom",
 			"APP_CONFIG_VOLUME": "Volume",
-			"APP_CONFIG_LANGUAGE": "Idioma",
+			"APP_CONFIG_LANGUAGE": "Linguagem",
 			"APP_CONFIG_MOUSE_SUPPORT": "Mouse",
 			"APP_CONFIG_RESET": "Formatar",
 			"APP_CONFIG_RESET_CONFIRM": "Concluir",
 			"APP_PHONE_CALL": "Ligar",
-			"APP_PHONE_DELETE": "Apagar",
-			"APP_PHONE_DELETE_ALL": "Apagar Tudo",
+			"APP_PHONE_DELETE": "Deletar",
+			"APP_PHONE_DELETE_ALL": "Limpar tudo",
 			"APP_PHONE_TITLE": "Telefone",
 			"APP_PHONE_MENU_FAVORITES": "Chamados",
-			"APP_PHONE_MENU_RECENTS": "Recentes",
+			"APP_PHONE_MENU_RECENTS": "Recente",
 			"APP_PHONE_MENU_CONTACTS": "Contatos",
 			"APP_PHONE_ENTER_NUMBER": "Telefone",
 			"APP_PHONE_NUMBER_HIDDEN": "Telefone",
@@ -145,77 +133,38 @@
 			"APP_BOURSE_TITLE": "Bolsa de Valores",
 			"APP_CONTACT_TITLE": "Contatos",
 			"APP_CONTACT_NEW": "Adicionar",
-			"APP_CONTACT_EDIT": "Editar Contato",
+			"APP_CONTACT_EDIT": "Editar",
 			"APP_CONTACT_SAVE": "Salvar",
 			"APP_CONTACT_CANCEL": "Cancelar",
-			"APP_CONTACT_DELETE": "Apagar",
+			"APP_CONTACT_DELETE": "Deletar",
 			"APP_CONTACT_LABEL_NAME": "Nome:",
-			"APP_CONTACT_LABEL_NUMBER": "Telefone:",
+			"APP_CONTACT_LABEL_NUMBER": "Nº:",
 			"APP_MESSAGE_TITLE": "Whatsapp",
 			"APP_MESSAGE_NEW_MESSAGE": "Adicionar",
-			"APP_MESSAGE_ERASE_CONVERSATION": "Apagar mensagem",
-			"APP_MESSAGE_ERASE_ALL_CONVERSATIONS": "Apagar conversa",
-			"APP_MESSAGE_SEND_GPS": "Enviar Localização",
-			"APP_MESSAGE_SET_GPS": "Posição do GPS",
-			"APP_MESSAGE_ZOOM_IMG": "Dar Zoom",
-			"APP_MESSAGE_DELETE": "Apagar",
-			"APP_MESSAGE_SMS": "Mensagem de Texto",
+			"APP_MESSAGE_ERASE_CONVERSATION": "Deletar mensagem",
+			"APP_MESSAGE_ERASE_ALL_CONVERSATIONS": "Deletar conversa",
+			"APP_MESSAGE_SEND_GPS": "Enviar localização",
+			"APP_MESSAGE_SET_GPS": "Localização",
+			"APP_MESSAGE_ZOOM_IMG": "Mais Zoom",
+			"APP_MESSAGE_DELETE": "Deletar",
+			"APP_MESSAGE_SMS": "Mensagem de texto",
 			"APP_MESSAGE_CONTACT_TITLE": "Contatos",
 			"APP_MESSAGE_CONTRACT_ENTER_NUMBER": "Telefone",
 			"APP_MESSAGE_PLACEHOLDER_ENTER_MESSAGE": "Enviar mensagem",
-			"APP_DARKTCHAT_TITLE": "Deep Web",
+			"APP_DARKTCHAT_TITLE": "Grupos",
 			"APP_DARKTCHAT_NEW_CHANNEL": "Adicionar Canal",
-			"APP_DARKTCHAT_DELETE_CHANNEL": "Apagar Canal",
+			"APP_DARKTCHAT_DELETE_CHANNEL": "Deletar Canal",
 			"APP_DARKTCHAT_CANCEL": "Cancelar",
 			"APP_DARKTCHAT_PLACEHOLDER_ENTER_MESSAGE": "Enviar mensagem",
-			"APP_TWITTER_NAME": "Twitter",
-			"APP_TWITTER_VIEW_TWITTER": "Twitter",
-			"APP_TWITTER_VIEW_TOP_TWEETS": "Curtidos",
-			"APP_TWITTER_VIEW_TWEETER": "Tweetar",
-			"APP_TWITTER_VIEW_SETTING": "Configuração",
-			"APP_TWITTER_NEW_ACCOUNT_USERNAME": "Usuário:",
-			"APP_TWITTER_NEW_ACCOUNT_PASSWORD": "Senha:",
-			"APP_TWITTER_NEW_ACCOUNT_PASSWORD_CONFIRM": "Re-Senha:",
-			"APP_TWITTER_NEW_ACCOUNT_AVATAR": "URL da Imagem",
-			"APP_TWITTER_PLACEHOLDER_MESSAGE": "O que está acontecendo?",
-			"APP_TWITTER_BUTTON_ACTION_TWEETER": "Tweetar",
-			"APP_TWITTER_ACCOUNT_LOGIN": "Login",
-			"APP_TWITTER_ACCOUNT_LOGOUT": "Desconectar-se do Local",
-			"APP_TWITTER_ACCOUNT_PARAM": "Minha Conta",
-			"APP_TWITTER_ACCOUNT_AVATAR": "Editar Imagem",
-			"APP_TWITTER_ACCOUNT_CHANGE_PASSWORD": "Alterar Senha",
-			"APP_TWITTER_ACCOUNT_NEW": "Inscreva-se agora",
-			"APP_TWIITER_ACCOUNT_SAVE": "Registrar",
-			"APP_TWIITER_ACCOUNT_CREATE": "Finalizar",
-			"APP_TWIITER_ACCOUNT_CANCEL": "Cancelar",
-			"APP_TWITTER_ACCOUNT_USERNAME": "Usuário:",
-			"APP_TWITTER_ACCOUNT_PASSWORD": "Senha:",
-			"APP_TWITTER_NOTIFICATION": "Notificações",
-			"APP_TWITTER_NOTIFICATION_WHEN": "Ser notificado",
-			"APP_TWITTER_NOTIFICATION_ALL": "Todas as notícias",
-			"APP_TWITTER_NOTIFICATION_MENTION": "Apenas ao mencionar",
-			"APP_TWITTER_NOTIFICATION_NEVER": "Ninguém",
-			"APP_TWITTER_NOTIFICATION_SOUND": "Tocar um som",
-			"APP_TWITTER_NOTIFICATION_SOUND_YES": "Sim",
-			"APP_TWITTER_NOTIFICATION_SOUND_NO": "Não",
-			"APP_TWITTER_NOTIF_ACCOUNT_CREATE_SUCCESS": "Sua conta do Twitter foi criada.",
-			"APP_TWITTER_NOTIF_ACCOUNT_CREATE_ERROR": "Sua conta do Twitter não pôde ser criada (nome de usuário já usado?)",
-			"APP_TWITTER_NOTIF_LOGIN_SUCCESS": "Você está conectado ao Twitter.",
-			"APP_TWITTER_NOTIF_LOGIN_ERROR": "Conta/senha inválido.",
-			"APP_TWITTER_NOTIF_AVATAR_SUCCESS": "Sua Imagem foi atualizada!",
-			"APP_TWITTER_NOTIF_NEW_PASSWORD_SUCCESS": "Sua senha foi alterada.",
-			"APP_TWITTER_NOTIF_NEW_PASSWORD_ERROR": "Ops... Sua senha não pode ser alterada.",
-			"APP_TWITTER_NOTIF_NEW_PASSWORD_MISS_MATCH": "As senhas não coincidem.",
-			"APP_TWITTER_NOTIF_NEW_PASSWORD_LENGTH_ERROR": "Senha muito curta.",
 			"TIMEAGO": [
 				"agora",
-				["%s segundo atrás","%s segundos atrás"],
-				["%s minuto atrás","%s minutos atrás"],
-				["%s hora atrás","%s horas atrás"],
-				["%s dia atrás","%s dias atrás"],
-				["%s semana atrás","%s semanas atrás"],
-				["%s mês atrás","%s meses atrás"],
-				["%s ano atrás","%s anos atrás"]
+				["%s segundo ago","%s segundos ago"],
+				["%s minuto ago","%s minutos ago"],
+				["%s hora ago","%s horas ago"],
+				["%s dia ago","%s dias ago"],
+				["%s semana ago","%s semanas ago"],
+				["%s mês ago","%s meses ago"],
+				["%s ano ago","%s anos ago"]
 			]
 		}
 	}
