--- a/server/server.cfg
+++ b/server/server.cfg
@@ -30,7 +30,7 @@ sets locale "pt-BR"
 #sets banner_connecting "https://url.to/image.png"
 
 # Set your server's hostname
-sv_hostname "Gringa Roleplay"
+sv_hostname "GG RP"
 
 # Nested configs!
 exec resources/resources.cfg
@@ -39,11 +39,11 @@ exec resources/resources.cfg
 load_server_icon server.png
 
 # convars which can be used in scripts
-set temp_convar "hey world!"
+set temp_convar "By Hensa!"
 
 # Remove the `#` from the below line if you do not want your server to be listed in the server browser.
 # Do not edit it if you *do* want your server listed.
-sv_master1 "Gringa Roleplay"
+sv_master1 "GG RP"
 
 # A boolean variable that, if true, hides player IP addresses from public reports output by the server.
 sv_endpointprivacy true
@@ -60,11 +60,11 @@ set onesync on
 #set sv_enforceGameBuild 2372/2189
 
 # Server player slot limit (see https://fivem.net/server-hosting for limits)
-sv_maxclients 5
+sv_maxclients 7
 
 # Steam Web API key, if you want to use Steam authentication (https://steamcommunity.com/dev/apikey)
 # -> replace "" with the key
 set steam_webApiKey "C6B1156E7913C462728BB00E03791ECA"
 
 # License key for your server 
-sv_licenseKey 5rxsm12xobs5gdj89b9huaqv3z82db45
+sv_licenseKey cfxk_J779aVleL7ssGJ6mcN2i_3iz4n1
