Removida necessidade de arrumar os pneus antes de usar o item Toolbox.

--- a/server/resources/resources.cfg
+++ b/server/resources/resources.cfg
@@ -54,7 +54,7 @@ ensure barbershop
 ensure skinshop
 ensure blipsystem
 ensure chest
-ensure dna
+ensure evidence
 ensure engine
 ensure homes
 ensure paramedic
