--- a/server/resources/resources.cfg
+++ b/server/resources/resources.cfg
@@ -87,7 +87,7 @@ ensure airforce
 ensure corrections
 ensure lumberman
 ensure methlabs
-ensure products
+ensure drugs
 ensure robberys
 ensure stockade
 ensure towdriver
