Renamed tacos for burgershot

--- a/server/resources/resources.cfg
+++ b/server/resources/resources.cfg
@@ -82,7 +82,7 @@ ensure miner
 ensure harvest
 ensure hunting
 ensure impound
-ensure tacos
+ensure burgershot
 ensure airforce
 ensure corrections
 ensure lumberman
