New trucker job

--- a/server/resources/resources.cfg
+++ b/server/resources/resources.cfg
@@ -83,6 +83,7 @@ ensure hunting
 ensure impound
 ensure burgershot
 ensure airforce
+ensure trucker
 ensure corrections
 ensure lumberman
 ensure drugs
