--- a/server/server.cfg
+++ b/server/server.cfg
@@ -14,10 +14,8 @@ sv_scriptHookAllowed 0
 
 # A comma-separated list of tags for your server.
 # For example:
-# - sets tags "drifting, cars, racing"
-# Or:
-# - sets tags "roleplay, military, tanks"
-sets tags "Brasil,BR,PT,LGBT,RP,Creative"
+# - sets tags "default,vrp"
+sets tags "default,vrp"
 
 # A valid locale identifier for your server's primary language.
 # For example "en-US", "fr-CA", "nl-NL", "de-DE", "en-GB", "pt-BR"
@@ -26,11 +24,11 @@ sets locale "pt-BR"
 
 # Set an optional server info and connecting banner image url.
 # Size doesn't matter, any banner sized image will be fine.
-#sets banner_detail "https://url.to/image.png"
+sets banner_detail "https://i.imgur.com/pJqAQIG.png"
 #sets banner_connecting "https://url.to/image.png"
 
 # Set your server's hostname
-sv_hostname "GG RP"
+sv_hostname "Creative Roleplay"
 
 # Nested configs!
 exec resources/resources.cfg
@@ -39,11 +37,11 @@ exec resources/resources.cfg
 load_server_icon server.png
 
 # convars which can be used in scripts
-set temp_convar "By Hensa!"
+set temp_convar "Hensa"
 
 # Remove the `#` from the below line if you do not want your server to be listed in the server browser.
 # Do not edit it if you *do* want your server listed.
-sv_master1 "GG RP"
+sv_master1 "Creative Roleplay"
 
 # A boolean variable that, if true, hides player IP addresses from public reports output by the server.
 sv_endpointprivacy true
@@ -60,7 +58,7 @@ set onesync on
 #set sv_enforceGameBuild 2372/2189
 
 # Server player slot limit (see https://fivem.net/server-hosting for limits)
-sv_maxclients 5
+sv_maxclients 3
 
 # Steam Web API key, if you want to use Steam authentication (https://steamcommunity.com/dev/apikey)
 # -> replace "" with the key
