--- a/server/server.cfg
+++ b/server/server.cfg
@@ -15,7 +15,7 @@ sv_scriptHookAllowed 0
 # A comma-separated list of tags for your server.
 # For example:
 # - sets tags "default,vrp"
-sets tags "default,vrp"
+sets tags "default,vrp,hensa"
 
 # A valid locale identifier for your server's primary language.
 # For example "en-US", "fr-CA", "nl-NL", "de-DE", "en-GB", "pt-BR"
