--- a/server/resources/resources.cfg
+++ b/server/resources/resources.cfg
@@ -8,8 +8,9 @@ ensure yarn
 ensure chat
 
 ensure vrp
-ensure mysql
-ensure ghmattimysql
+
+ensure oxdrive
+ensure oxmysql
 
 ensure clothesAddons
 ensure clothesReplace
