--- a/server/server.cfg
+++ b/server/server.cfg
@@ -2,8 +2,12 @@
 endpoint_add_tcp "0.0.0.0:30120"
 endpoint_add_udp "0.0.0.0:30120"
 
-set mysql_connection_string "server=127.0.0.1;uid=root;password=;database=creative"
+# MySQL Connection
+#set mysql_connection_string "server=127.0.0.1;uid=root;password=;database=creative"
 #set mysql_debug "Console"
+
+# OxMYSQL Connection
+set mysql_connection_string "user=root;database=creative;password=;charset=utf8mb4"
 
 # This allows players to use scripthook-based plugins such as the legacy Lambda Menu.
 # Set this to 1 to allow scripthook. Do note that this does _not_ guarantee players won't be able to use external plugins.
