--- a/server/server.cfg
+++ b/server/server.cfg
@@ -29,7 +29,7 @@ sets locale "pt-BR"
 # Set an optional server info and connecting banner image url.
 # Size doesn't matter, any banner sized image will be fine.
 sets banner_detail "https://i.imgur.com/pJqAQIG.png"
-#sets banner_connecting "https://url.to/image.png"
+sets banner_connecting "https://i.imgur.com/pJqAQIG.png"
 
 # Set your server's hostname
 sv_hostname "Creative Roleplay"
