--- a/server/server.cfg
+++ b/server/server.cfg
@@ -53,20 +53,20 @@ sv_endpointprivacy true
 # Add system admins
 add_ace group.admin command allow # allow all commands
 add_ace group.admin command.quit deny # but don't allow qu
-add_principal identifier.steam:110000133d442df group.admin
+# add_principal identifier.steam: group.admin
 
 # enable OneSync (required for server-side state awareness)
 set onesync on
 
 # Force build
-#set sv_enforceGameBuild 2372/2189
+set sv_enforceGameBuild 2612
 
 # Server player slot limit (see https://fivem.net/server-hosting for limits)
 sv_maxclients 3
 
 # Steam Web API key, if you want to use Steam authentication (https://steamcommunity.com/dev/apikey)
 # -> replace "" with the key
-set steam_webApiKey "C6B1156E7913C462728BB00E03791ECA"
+set steam_webApiKey ""
 
 # License key for your server 
-sv_licenseKey cfxk_J779aVleL7ssGJ6mcN2i_3iz4n1
+sv_licenseKey 
